--- a/README.Rmd
+++ b/README.Rmd
@@ -15,10 +15,6 @@ knitr::opts_chunk$set(
 
 # kjhnet
 
-<!-- badges: start -->
-[![Travis build status](https://travis-ci.org/kjhealy/kjhnet.svg?branch=master)](https://travis-ci.org/kjhealy/kjhnet)
-<!-- badges: end -->
-
 Some network data, for teaching purposes. 
 
 - Iliad data are from Gabriel Rossman (2017) "[Glory and Gore](https://journals.sagepub.com/doi/full/10.1177/1536504217732052)", *Contexts* 16(3):42--47. Original data files available at <https://osf.io/jasf4/>.
@@ -35,43 +31,8 @@ Some network data, for teaching purposes.
 You can install the beta version of kjhnet from [GitHub](https://github.com/kjhealy/kjhnet) with:
 
 ``` r
-devtools::install_github("kjhealy/kjhnet")
+remotes::install_github("kjhealy/kjhnet")
 ```
-
-### Installation using `drat`
-
-While using `install_github()` works just fine, it would be nicer to be able to just type `install.packages("kjhnet")` or `update.packages("kjhnet")` in the ordinary way. We can do this using Dirk Eddelbuettel's [drat](http://eddelbuettel.github.io/drat/DratForPackageUsers.html) package. Drat provides a convenient way to make R aware of package repositories other than CRAN.
-
-First, install `drat`:
-
-```{r drat, eval = FALSE}
-if (!require("drat")) {
-    install.packages("drat")
-    library("drat")
-}
-```
-
-Then use `drat` to tell R about the repository where `kjhnet` is hosted:
-
-```{r drat-kjhnet}
-drat::addRepo("kjhealy")
-```
-
-You can now install `kjhnet`:
-
-```{r kjhnet-drat, eval = FALSE}
-install.packages("kjhnet")
-```
-
-To ensure that the `kjhnet` repository is always available, you can add the following line to your `.Rprofile` or `.Rprofile.site` file:
-
-```{r rprofile}
-drat::addRepo("kjhealy")
-```
-
-With that in place you'll be able to do `install.packages("kjhnet")` or `update.packages("kjhnet")` and have everything work as you'd expect. 
-
-Note that the drat repository only contains data packages that are not on CRAN, so you will never be in danger of grabbing the wrong version of any other package.
 
 
 ## Loading the data
